# parallel_seq

./: .gitignore  LICENSE  LICENSE.md  README.md  TODO  dune  dune-project  graph.py  index_set_s.out  parallel_seq.opam  parallelseq.opam  run_test.py  time_map_out.txt  time_reduce_out.txt  time_reduce_out2.txt  tmp.txt
back_up/: block_matrix_mul  inverted_index  progress.txt
fast_append_list/: dune  falist.ml
index/: dune  inverted_index.ml  inverted_index.mli
index_data/: test_index_1.txt  test_index_10.txt  test_index_1000.txt  test_index_2.txt
index_out/: progress10_backwards.txt  progress5.txt  progress_what_asc.txt  repeat1.txt  repeat10_backwards.txt  repeat10_backwards_backup.txt  repeat1_backwards.txt  repeat1_what.txt  repeat1_what_asc.txt  repeat2_backwards.txt  repeat5.txt  repeat5_backwards.txt
inverted_index/: dune  inverted_index.ml  inverted_index.mli  parse.ml
inverted_index/index_data/: test_index_10.txt  test_index_100.txt
lib/: array_handler.c  array_handler.ml  array_handler.mli  defaults.ml  defaults.mli  defines.ml  defines.mli  dune  parallel_seq.ml  parallel_seq.mli  sequence.ml  sequence.mli  sequence_intf.ml  test.ml  test.mli  utils.ml  utils.mli
matrix/: dune  matrix.ml  matrix.mli  matrix_intf.ml
misc/scripts/: remove_title.py  run_test.py
quicksort/: dune  quicksort.ml  quicksort.mli  sort.ml
scan_out/: Array.copy  progress.txt  scan_domainslib  scan_in_place
scripts/: average.py  gen_data.py  gen_index_data.py  graph.py  graph_scan.py  graph_scan_tests.py  graph_speedup_test.py  remove_title.py  run_all_array_scan_tests.py  run_all_speedup_tests.py  run_array_scan_test.py  run_inverted_index_test.py  run_speedup_test.py  run_test.py  schedule_array_scan_tests.py
seq/: defines.ml  defines.mli  dune  sequence.ml  sequence.mli  utils.ml  utils.mli
speed_up_curves/: array_copy.out  block_matrix.out  index.txt  matrix_mul.txt  scan_domainslib.out
speed_up_curves/final/: array_copy.out  scan_domainslib.out  scan_domainslib_100.out  seq_matrix.out
speed_up_curves/timing_out/: array_copy_backup.out  time_scan_out.txt  time_tabulate_out.txt
speed_up_out/: inverted_index  progress.txt
test/: dune  sequence_provider.ml  test_array_handler.ml  test_basic_arr_ops.ml  test_cast_pointer.ml  test_combine.ml  test_gc_harmony.ml  test_gc_scan.ml  test_iter.ml  test_mat_mul.ml  test_misc_ops.ml  test_ordering.ml  test_pointer.ml  test_quicksort.ml  test_splice_append_ops.ml  test_split_append_ops.ml  test_tabulate_and_friends.ml  test_valid.ml
test_seq/: dune  gc_test.ml  int_pointer.ml  test_seq.ml
time/: dune  time_array_handler.ml  time_array_make.ml  time_array_matrix.ml  time_block_matrix.ml  time_index.ml  time_map.ml  time_matrix.ml  time_par_for.ml  time_reduce.ml  time_scan.ml  time_seq_matrix.ml  time_sort.ml  time_tabulate.ml  time_utils.ml  time_utils.mli
time/array_init/: array_init.ml  array_init.mli  dune
time/commander/: dune  time.ml  time.mli
time/inverted_index/: dune  time_inverted_index.ml  time_inverted_index.mli
time/matrix_mul/: dune  time_matrix_mul.ml  time_matrix_mul.mli
time/test_runner/: dune  test_runner.ml  test_runner.mli
time/time_scan/: dune  mutating_scan.ml  mutating_scan.mli  time_scan.ml  time_scan.mli
time/time_test/: dune  time_test.ml  time_test.mli
time_seq/: dune  example_time_killer.ml  time_seq.ml  time_seq.mli  time_seq_utils.ml  time_seq_utils.mli
