(library
 (name sequence_provider)
 (modules sequence_provider)
 (libraries parallel_seq domainslib))

(test
 (name test_pointer)
 (modules test_pointer))

(test
 (name test_gc_scan)
 (libraries parallel_seq sequence_provider)
 (modules test_gc_scan))

(test
 (name test_iter)
 (libraries parallel_seq sequence_provider)
 (modules test_iter))

(test
 (name test_combine)
 (libraries parallel_seq sequence_provider)
 (modules test_combine))

(test
 (name test_tabulate_and_variants)
 (libraries parallel_seq sequence_provider)
 (modules test_tabulate_and_variants))

(test
 (name test_mat_mul)
 (libraries parallel_seq sequence_provider matrix)
 (modules test_mat_mul))

(test
 (name test_misc_ops)
 (libraries parallel_seq sequence_provider)
 (modules test_misc_ops))

(test
 (name test_basic_arr_ops)
 (libraries parallel_seq sequence_provider)
 (modules test_basic_arr_ops))
